# Breakout

./: CMakeLists.txt  CMakeSettings.json
app/: CMakeLists.txt  main.cpp
data/shader/: sprite.fragment.glsl  sprite.vertex.glsl
include/: Definitions.hpp
include/Game/: Game.hpp  GameRenderer.hpp
include/Game/Entities/: Ball.hpp  Brick.hpp  Paddle.hpp  Powerup.hpp
include/Scenes/: GameScene.hpp  IntroScene.hpp  TitleScene.hpp
src/: Definitions.cpp
src/Game/: Game.cpp  GameRenderer.cpp
src/Scenes/: GameScene.cpp  IntroScene.cpp  TitleScene.cpp
