CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

cmake_policy(SET CMP0074 NEW)

PROJECT(Breakout 
	VERSION 0.1
	LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake/modules")
FIND_PACKAGE(ZENO)

ADD_SUBDIRECTORY(app)