SET(AppMain "Breakout")

file (GLOB_RECURSE APP_SOURCE_FILES "${PROJECT_SOURCE_DIR}/src/*.cpp")

ADD_EXECUTABLE(${AppMain} "main.cpp" ${APP_SOURCE_FILES})
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD_REQUIRED ON)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE ${ZENO_LIBRARIES})
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE ${ZENO_DEPENDENCIES})
TARGET_INCLUDE_DIRECTORIES(${AppMain} PUBLIC ${ZENO_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(${AppMain} PUBLIC "${PROJECT_SOURCE_DIR}/include")

add_custom_command(TARGET ${AppMain} POST_BUILD
                   COMMAND ${CMAKE_COMMAND} -E copy_directory
                       ${CMAKE_SOURCE_DIR}/data $<TARGET_FILE_DIR:${AppMain}>/data)